Wrote basic server.js file and init-ed node

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,12 @@
           <!-- Populated option tags go here -->
         </select>
         <input type="text" placeholder="New User">
+        <button type="button">Submit</button>
       </section>
       <section id="home">
         <section id="search">
           <!-- Cloud tags go here -->
+          <button type="button">Submit</button>
         </section>
         <section id="results">
           <ul>
