--- a/public/index.html
+++ b/public/index.html
@@ -46,5 +46,15 @@
     </main>
     <footer>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.js"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
+    <script type="text/javascript" src="scripts/model/showModel.js"></script>
+    <script type="text/javascript" src="scripts/model/userModel.js"></script>
+    <script type="text/javascript" src="scripts/controller/showController.js"></script>
+    <script type="text/javascript" src="scripts/controller/userController.js"></script>
+    <script type="text/javascript" src="scripts/view/homeView.js"></script>
+    <script type="text/javascript" src="scripts/view/landingView.js"></script>
+
   </body>
 </html>
