Wrote function to filter data

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       <section id="home">
         <section id="search">
           <!-- Cloud tags go here -->
-          <button type="button">Submit</button>
+          <button id="querySubmitButton" type="button">Submit</button>
         </section>
         <section id="results">
           <ul>
