--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/module.css">
     <link rel="stylesheet" href="styles/state.css">
+    <script id="time-cloud-template" type="text/x-handlebars-template">
+      <!-- for each thing from the database, create a cloud tag thing -->
+      <li value="{{time_id}}">{{time}}</li>
+    </script>
+    <script id="day-cloud-template" type="text/x-handlebars-template">
+      <!-- for each thing from the database, create a cloud tag thing -->
+      <li value="{{day_id}}">{{day}}</li>
+    </script>
+    <script id="genre-cloud-template" type="text/x-handlebars-template">
+      <!-- for each thing from the database, create a cloud tag thing -->
+      <li value="{{genre_id}}">{{genre}}</li>
+    </script>
   </head>
   <body>
     <header>
@@ -28,7 +40,15 @@
       </section>
       <section id="home">
         <section id="search">
-          <!-- Cloud tags go here -->
+          <ul id="genreCloud">
+            <!-- Genre cloud tags go here -->
+          </ul>
+          <ul id="timeCloud">
+            <!-- Time cloud tags go here -->
+          </ul>
+          <ul id="dayCloud">
+            <!-- Days cloud tags go here -->
+          </ul>
           <button id="querySubmitButton" type="button">Submit</button>
         </section>
         <section id="results">
