added mock data

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         <select class="" name="">
           <!-- Populated option tags go here -->
         </select>
-        <input type="text" placeholder="New User">
+        <input id="input" type="text" placeholder="New User">
         <button type="button">Submit</button>
       </section>
       <section id="home">
