Workin gon getting time pref from database

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     </header>
     <main>
       <section id="landing">
-        <select class="" name="">
+        <select id="userDropDown" class="" name="">
           <option default>Select a User &#x25BC;</option>
           <option value="65375">Test User</option>
           <!-- Populated option tags go here -->
