--- a/public/index.html
+++ b/public/index.html
@@ -10,19 +10,26 @@
     <link rel="stylesheet" href="styles/state.css">
     <script id="time-cloud-template" type="text/x-handlebars-template">
       <!-- for each thing from the database, create a cloud tag thing -->
-      <a><li class="cloud time" value="{{time_id}}">{{time}}</li></a>
+      <!-- ID supposed to be set by the database as we populate the handlebars template -->
+      <!-- selected class added as selected -->
+      <!-- use selected and specific data type. controller is array of id -->
+      <!-- views handle the click and get the data -->
+      <li class="cloud time" value="{{time_id}}">{{time}}</li>
     </script>
     <script id="day-cloud-template" type="text/x-handlebars-template">
       <!-- for each thing from the database, create a cloud tag thing -->
-      <a><li class="cloud day" value="{{day_id}}">{{day}}</li></a>
+      <li class="cloud day" value="{{day_id}}">{{day}}</li>
     </script>
     <script id="genre-cloud-template" type="text/x-handlebars-template">
       <!-- for each thing from the database, create a cloud tag thing -->
-      <a><li class="cloud genre" value="{{genre_id}}">{{genre}}</li></a>
+      <li class="cloud genre" value="{{genre_id}}">{{genre}}</li>
     </script>
     <script id="results-template" type="text/x-handlebars-template">
       <!-- for each thing from the database, create a cloud tag thing -->
       <li>{{title}}</li>
+    </script>
+    <script type="text/x-handlebars-template" id="dropdown-template">
+      <option value={{user_id}}>{{username}}</option>
     </script>
   </head>
   <body>
@@ -39,10 +46,9 @@
       <section id="landing">
         <select class="" name="">
           <option default>Select a User &#x25BC;</option>
-          <option value="65375">Test User</option>
-          <!-- Populated option tags go here -->
         </select>
-        <input id="input" type="text" placeholder="New User">
+        <input id="name" type="text" placeholder="Your Name">
+        <input id="username" type="text" placeholder="Username">
         <button id="newUserButton" type="button">Submit</button>
       </section>
       <section id="home">
