--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,15 @@
     <link rel="stylesheet" href="styles/state.css">
     <script id="time-cloud-template" type="text/x-handlebars-template">
       <!-- for each thing from the database, create a cloud tag thing -->
-      <a><li class="cloud time" value="{{time_id}}">{{time}}</li></a>
+      <li class="cloud time" value="{{time_id}}">{{time}}</li>
     </script>
     <script id="day-cloud-template" type="text/x-handlebars-template">
       <!-- for each thing from the database, create a cloud tag thing -->
-      <a><li class="cloud day" value="{{day_id}}">{{day}}</li></a>
+      <li onclick="{{stringifyFunc func}}" class="cloud day" value="">{{text}}</li>
     </script>
     <script id="genre-cloud-template" type="text/x-handlebars-template">
       <!-- for each thing from the database, create a cloud tag thing -->
-      <a><li class="cloud genre" value="{{genre_id}}">{{genre}}</li></a>
+      <li class="cloud genre" value="{{genre_id}}">{{genre}}</li>
     </script>
     <script id="results-template" type="text/x-handlebars-template">
       <!-- for each thing from the database, create a cloud tag thing -->
