Load preference data into database from user interaction

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     </script>
     <script id="day-cloud-template" type="text/x-handlebars-template">
       <!-- for each thing from the database, create a cloud tag thing -->
-      <li onclick="{{stringifyFunc func}}" class="cloud day" value="">{{day}}</li>
+      <li onclick="{{stringifyFunc func}}" class="cloud day" value="{{day_id}}">{{day}}</li>
     </script>
     <script id="genre-cloud-template" type="text/x-handlebars-template">
       <!-- for each thing from the database, create a cloud tag thing -->
