--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
           <ul id="genreCloud">
             <!-- Genre cloud tags go here -->
           </ul>
-          <button id="querySubmitButton" type="button">Submit</button>
+          <a href="/main"><button id="querySubmitButton" type="button">Submit</button></a>
         </section>
       </section>
       <section id="results">
@@ -89,5 +89,6 @@
     <script type="text/javascript" src="scripts/view/landingView.js"></script>
     <script type="text/javascript" src="scripts/controller/showController.js"></script>
     <script type="text/javascript" src="scripts/controller/userController.js"></script>
+    <script type="text/javascript" src="scripts/controller/routes.js"></script>
   </body>
 </html>
