--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
       </section>
       <section id="about">
         <article class="Aeone bio">
-          <h2><img src="images/aeone.png" alt="Not to be toyed with">Aeone</h2>
+          <h2><img src="images/aeone.png" alt="Not to be toyed with" width="300px" height="300px">Aeone</h2>
           <p>Aeone Singson has an Associate of Science Degree in computer science and is currently working on the Apprenti program software development apprentice training track. Her hobbies include reading, thinking about robots, and drawing. Her passions include spreading technology access and education and volunteering in the community.</p>
         </article>
         <article class="Alana bio">
