--- a/public/index.html
+++ b/public/index.html
@@ -75,16 +75,19 @@
       </section>
       <section id="about">
         <article class="Aeone bio">
-          <h2><img src="images/aeone.png" alt="Not to be toyed with" width="200px" height="200px">Aeone</h2>
+          <h2><img src="images/aeone.png" alt="Not to be toyed with" width="200px" height="200px">Aeone
           <p>Aeone Singson has an Associate of Science Degree in computer science and is currently working on the Apprenti program software development apprentice training track. Her hobbies include reading, thinking about robots, and drawing. Her passions include spreading technology access and education and volunteering in the community.</p>
+          </h2>
         </article>
         <article class="Alana bio">
-          <h2><img src="images/alana.png" alt="Picture of a bad-ass coder" width="200px" height="200px">Alana</h2>
+          <h2><img src="images/alana.png" alt="Picture of a bad-ass coder" width="200px" height="200px">Alana
           <p>Alana Franklin has a Bachelor of Music in Vocal Performance. Over the five years as she worked administrative jobs for local tech companies including Headsprout, SpaceCurve, and Amazon. She is currently going through apprentice training with the Apprenti program for software development. Outside of work, Alana enjoys traveling, Crossfit, and watching an impressive amount of tv.</p>
+          </h2>
         </article>
         <article class="JP bio">
-          <h2><img src="images/jp.png" alt="What you talkin' 'bout Willis?!?" width="200px" height="200px">Jp</h2>
+          <h2><img src="images/jp.png" alt="What you talkin' 'bout Willis?!?" width="200px" height="200px">Jp
           <p>John Gaines is starting a career in tech after a 25 year career at sea. He is a part of the software development apprentice training program at Apprenti. He enjoys working on various technological projects and playing the guitar.</p>
+          </h2>
         </article>
       </section>
     </main>
