added increased styling

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
         <input id="name" type="text" placeholder="Your Name">
         <input id="username" type="text" placeholder="Username">
         <!-- onclick="window.location.href='/main';" -->
-        <a href="/main"><button id="newUserButton" type="button">Submit</button></a>
+        <a id="landingLink" href="/main"><button id="newUserButton" type="button">Submit</button></a>
       </section>
       <section id="home">
         <section id="search">
